tests/samples/invalid/initialization_type_mismatch.pn
fn main() -> i32
{
	var x: i32;
	x = true;
	return: x
}
